--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=cardb
-spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/freepdb1
+spring.datasource.username=cars
+spring.datasource.password=oracle
+spring.datasource.driver-class=oracle.jdbc.driver.OracleDriver
