--- a/data/src/main/resources/application.properties
+++ b/data/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/freepdb1
 spring.datasource.username=cars
 spring.datasource.password=oracle
-spring.datasource.driver-class=oracle.jdbc.driver.OracleDriver
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
