--- a/data/pom.xml
+++ b/data/pom.xml
@@ -15,6 +15,11 @@
 	<url/>
 	<dependencies>
 		<dependency>
+			<groupId>com.packt.cardb</groupId>
+			<artifactId>domain</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
