--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -14,6 +14,10 @@
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-data-jpa</artifactId>
+	</dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
