--- a/data/src/main/resources/application.properties
+++ b/data/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=cardb
 spring.jpa.show-sql=true
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/freepdb1
 spring.datasource.username=cars
