--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -11,16 +11,40 @@
   <artifactId>rest</artifactId>
   <packaging>war</packaging>
   <name>rest</name>
-  <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-web</artifactId>
 	</dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+	<dependency>
+		<groupId>com.packt.cardb</groupId>
+		<artifactId>domain</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</dependency>
+	<dependency>
+		<groupId>com.packt.cardb</groupId>
+		<artifactId>service</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-test</artifactId>
+		<scope>test</scope>
+	</dependency>
+</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			<executions>
+	        	<execution>
+	            <configuration>
+	                <mainClass>com.packt.cardb.rest.Application</mainClass>
+	            </configuration>
+	        	</execution>
+	    	</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
