--- a/service/pom.xml
+++ b/service/pom.xml
@@ -7,16 +7,35 @@
 		<version>1.0-SNAPSHOT</version>
 		<relativePath>../</relativePath>
   </parent>
-  <groupId>com.packt.packt</groupId>
+  <groupId>com.packt.cardb</groupId>
   <artifactId>service</artifactId>
   <packaging>jar</packaging>
   <name>service</name>
-  <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
+    	<groupId>com.packt.cardb</groupId>
+		<artifactId>data</artifactId>
+		<version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.packt.cardb</groupId>
+  		<artifactId>domain</artifactId>
+  		<version>1.0-SNAPSHOT</version>
+    </dependency>
+	<dependency>
+	    <groupId>org.modelmapper</groupId>
+	    <artifactId>modelmapper</artifactId>
+	    <version>3.2.0</version>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-test</artifactId>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
-    </dependency>
+    </dependency>	
   </dependencies>
 </project>
