--- a/data/src/main/resources/application.properties
+++ b/data/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.jpa.show-sql=true
 
 spring.jpa.hibernate.ddl-auto=none
 
+spring.data.rest.basePath=/api
+
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/freepdb1
 spring.datasource.username=cars
 spring.datasource.password=oracle
