--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -17,6 +17,15 @@
 		<artifactId>spring-boot-starter-web</artifactId>
 	</dependency>
 	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-security</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-test</artifactId>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
 		<groupId>com.packt.cardb</groupId>
 		<artifactId>domain</artifactId>
 		<version>1.0-SNAPSHOT</version>
