--- a/data/src/main/resources/application.properties
+++ b/data/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=cardb
 spring.jpa.show-sql=true
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 spring.data.rest.basePath=/api
 
